fix autocompletes being too large to fit in container

--- a/muckrock/assets/scss/pattern/_autocomplete.scss
+++ b/muckrock/assets/scss/pattern/_autocomplete.scss
@@ -99,3 +99,7 @@ input.autocomplete.xhr-pending { background-image: none; }
 .create-request .select2-selection__clear {
   visibility: hidden;
 }
+
+.field .select2-container {
+  min-width: inherit;
+}
